# TreeSearch

./: .gitignore  CHANGELOG.md  README.md  README_ZH.md  dist-workspace.toml  pyproject.toml  requirements.txt
docs/: api.md  architecture.md  code_v2.md  my_update.md  new_idea.md  paper_v2.md  tree_search_experiments.md  tree_update.md
evaluation/: README.md  codesearchnet_eval.py  evaluate.py  external_baselines.py  graphrag_bench.py  repoqa_snf.py
examples/: 01_basic_demo.py  01_index_and_search.py  02_index_and_search.py  02_text_indexing.py  03_cli_workflow.py  03_text_indexing.py  04_cli_workflow.py  04_multi_doc_search.py  05_benchmark.py  05_multi_doc_search.py  06_benchmark.py  06_pdf_demo.py  07_tree_search_demo.py  09_jieba_userdict_demo.py  __init__.py
rust/: Cargo.toml  README.md
rust/src/: config.rs  document.rs  lib.rs  main.rs
rust/src/engine/: fts.rs  indexer.rs  mod.rs  search.rs  tree_walker.rs
rust/src/output/: json.rs  mod.rs  plain.rs  tty.rs
rust/src/parser/: config_file.rs  html.rs  markdown.rs  mod.rs  plaintext.rs  treesitter.rs
rust/src/scorer/: heuristics.rs  mod.rs
rust/src/tokenizer/: cjk.rs  mod.rs
tests/: conftest.py  test_batch_search.py  test_benchmark.py  test_bm25.py  test_cli.py  test_codesearchnet_graphrag.py  test_config.py  test_evaluation_adapters.py  test_fts.py  test_incremental.py  test_indexer.py  test_llm.py  test_metrics.py  test_pathutil.py  test_public_qa_eval.py  test_search.py  test_tokenizer.py  test_tree.py  test_tree_searcher.py
tmp/: graphrag_queries.json  graphrag_smoke_demo.py  graphrag_triplets.json
treesearch/: __init__.py  __main__.py  benchmark.py  cli.py  config.py  (+13 more)
(+52 files in other folders)
